# FormatCodeForAI

./: CMakeLists.txt  FormatCodeForAI.sln  README.md
FormatCodeForAI/: .editorconfig  Application.cpp  Application.h  ArgParser.cpp  ArgParser.h  CMakeLists.txt  CodeReader.cpp  CodeReader.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FormatCodeForAI.vcxproj  FormatCodeForAI.vcxproj.filters  README.md  main.cpp
FormatCodeForAI/src/: CodeDisplayer.cpp  CodeDisplayer.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  main.cpp
